--- a/night.css
+++ b/night.css
@@ -1,6 +1,7 @@
 @import "night/mermaid.dark.css";
 @import "night/codeblock.dark.css";
 @import "night/sourcemode.dark.css";
+@import 'auto-number.css';
 
 :root {
     --bg-color:  #363B40;
