--- a/old-themes/night.css
+++ b/old-themes/night.css
@@ -951,6 +951,10 @@ footer.ty-footer {
     line-height: 22px;
 }
 
+.file-node-open-state, .file-node-icon {
+    line-height: 26px;
+}
+
 ::-webkit-scrollbar-thumb {
     background: rgba(230, 230, 230, 0.30);
 }
